--- a/students_data.ipynb
+++ b/students_data.ipynb
@@ -4,21 +4,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# First Jupiter notebook trial for data analysis\n"
+    "# First Jupiter notebook trial for data analysis\n",
+    "## Setting VScode with python virtual environment\n",
+    "### First Step : Create virtual env and kernel\n",
+    "```bash\n",
+    "python -m venv environment_name\n",
+    "source environment_name/bin/activate\n",
+    "(environment_name) pip install jupyter notebook\n",
+    "(environment_name) python -m ipykernel install --user --name=kernel_name\n",
+    "```\n",
+    "### Second Step : Select new created Kernel"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[93, 91, 74, 87, 58, 64, 96, 2, 69, 51]"
+       "[75, 95, 5, 18, 24, 99, 76, 35, 73, 40, 15, 37, 83, 38, 100]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -26,16 +35,36 @@
    "source": [
     "import random\n",
     "\n",
-    "data = [ random.randint(0,100) for _ in range(10) ]\n",
+    "data = [ random.randint(0,100) for _ in range(15) ]\n",
     "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 75  95   5  18  24  99  76  35  73  40  15  37  83  38 100]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "grades = np.array(data)\n",
+    "print(grades)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 64-bit",
+   "display_name": "Data-analysis",
    "language": "python",
-   "name": "python3"
+   "name": "data-analysis"
   },
   "language_info": {
    "codemirror_mode": {
