--- a/students_data.ipynb
+++ b/students_data.ipynb
@@ -18,37 +18,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[75, 95, 5, 18, 24, 99, 76, 35, 73, 40, 15, 37, 83, 38, 100]"
+       "[50,\n",
+       " 50,\n",
+       " 47,\n",
+       " 97,\n",
+       " 49,\n",
+       " 3,\n",
+       " 53,\n",
+       " 42,\n",
+       " 26,\n",
+       " 74,\n",
+       " 82,\n",
+       " 62,\n",
+       " 37,\n",
+       " 15,\n",
+       " 70,\n",
+       " 27,\n",
+       " 36,\n",
+       " 35,\n",
+       " 48,\n",
+       " 52,\n",
+       " 63,\n",
+       " 64]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import random\n",
     "\n",
-    "data = [ random.randint(0,100) for _ in range(15) ]\n",
+    "data = [50,50,47,97,49,3,53,42,26,74,82,62,37,15,70,27,36,35,48,52,63,64]\n",
     "data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 75  95   5  18  24  99  76  35  73  40  15  37  83  38 100]\n"
+      "[100 100  94 194  98   6 106  84  52 148 164 124  74  30 140  54  72  70\n",
+      "  96 104 126 128]\n"
      ]
     }
    ],
@@ -56,7 +77,67 @@
     "import numpy as np\n",
     "\n",
     "grades = np.array(data)\n",
-    "print(grades)"
+    "print(grades * 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(22,)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grades.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grades[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "study_hours = [10.0,11.5,9.0,16.0,9.25,1.0,11.5,9.0,8.5,14.5,15.5,\n",
+    "               13.75,9.0,8.0,15.5,8.0,9.0,6.0,10.0,12.0,12.5,12.0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "students_data = np.array([study_hours, grades , [ str(bool(random.choice([0,1]))) for _ in range(22) ]])"
    ]
   }
  ],
